@@ -1,3 +1,7 @@
+2020-10-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/spdlog/*: Upgraded to upstream release 1.8.1
+
 2020-09-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/exampleRsink.cpp (exampleRsink): Use default logger instance
